# sageport

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  bump.config.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-linux-deps/: action.yml
.github/actions/setup-toolchain/: action.yml
.github/rulesets/: protect-main.json  protect-release-tags.json  setup.md
.github/workflows/: ci.yml  release.yml  verify.yml
docs/: audit.md  index.html  macos-signing-and-notarization.md  privacy-policy.html  privacy-policy.md  style.css  sync-oauth-setup.md  tasks-feature-design.md  terms-of-service.html  terms-of-service.md
public/fonts/: README.md
scripts/: check-bundle.mjs  check-conventions.mjs  generate-icons.mjs  sync-app-version.d.mts  sync-app-version.mjs  sync-app-version.test.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_ai_sessions.sql  0003_sftp_transfers.sql  0004_host_extensions.sql  0005_port_forwards.sql  0006_sftp_bookmarks.sql  0007_command_history.sql  0008_command_history_index.sql  0009_host_approval.sql  0010_remove_host_ai_approval.sql  0011_transfer_host_labels.sql  0012_tasks.sql
src-tauri/src/: error.rs  legacy.rs  lib.rs  main.rs  network.rs  paths.rs  secrets.rs  state.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/commands/: ai.rs  app.rs  batch.rs  bookmarks.rs  clipboard.rs  forwards.rs  groups.rs  history.rs  hosts.rs  identities.rs  keys.rs  mod.rs  monitor.rs  pty.rs  settings.rs  sftp.rs  snippets.rs  ssh.rs  ssh_config.rs  sync.rs  tasks.rs  update.rs  window.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: bookmark.rs  cron.rs  forward.rs  group.rs  history.rs  host.rs  identity.rs  key.rs  mod.rs  snippet.rs  task.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/repository/: ai_session_repo.rs  bookmark_repo.rs  forward_repo.rs  group_repo.rs  history_repo.rs  host_repo.rs  identity_repo.rs  key_repo.rs  mod.rs  settings_repo.rs  snippet_repo.rs  task_repo.rs  task_run_repo.rs  transfer_repo.rs
src-tauri/src/sftp/: delete.rs  mod.rs  ops.rs  path.rs  transfer.rs  transport.rs
src-tauri/src/ssh/: agent.rs  config_file.rs  connect.rs  exec.rs  forward.rs  handler.rs  known_hosts.rs  mod.rs  monitor.rs  session.rs
src-tauri/src/sshkey/: mod.rs
src-tauri/src/sync/: gdrive.rs  gist.rs  mod.rs  oauth.rs  onedrive.rs  provider.rs  s3.rs  settings_compat.rs  webdav.rs
src-tauri/src/update/: mod.rs
src-tauri/tests/: russh_transport.rs  test_host_key
src/app/: OverlayHost.tsx  overlay-store.ts  providers.tsx
src/components/layout/: TitleBar.tsx  WindowControls.tsx  WindowHeader.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button-variants.ts  button.tsx  collapsible.tsx  confirm-dialog.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  field.tsx  find-bar.tsx  form-dialog.tsx  index.ts  input.tsx  kbd.tsx  label.tsx  password-input.tsx  radio-group.tsx  resize-handle.tsx  scroll-area.tsx  section-header.tsx  segmented-control.tsx  select.test.tsx  select.tsx  spinner.tsx  styles.ts  switch-field.tsx  switch.tsx  tabs.tsx  textarea.tsx  toaster.tsx  tooltip.tsx  tree-select-model.ts  tree-select.test.ts  tree-select.tsx  use-dialog-snapshot.ts
src/features/ai/: AiPanel.tsx  AssistantPanel.tsx  ToolActivity.tsx  api.ts  history.test.ts  history.ts  links.test.ts  links.ts  model-limits.test.ts  model-limits.ts  runner.test.ts  runner.ts  store.ts  suggestions.test.ts  suggestions.ts  tools.test.ts  tools.ts  transcript.test.ts  transcript.ts
src/features/credentials/: CredentialsView.tsx  IdentitiesSection.tsx  IdentityFormDialog.tsx  KeyFormDialog.tsx  KeysSection.tsx  api.ts  identityForm.test.ts  identityForm.ts
src/features/forwards/: ForwardFormDialog.tsx  ForwardsView.tsx  api.ts  forwardForm.test.ts  forwardForm.ts  store.test.ts  store.ts
src/features/hosts/: GroupFormDialog.tsx  HostBrandIcon.tsx  HostFormDialog.tsx  HostSidebar.tsx  HostSystemIcon.test.tsx  HostSystemIcon.tsx  HostsView.tsx  SshConfigImportDialog.tsx  api.ts  groupTree.test.ts  groupTree.ts  hostForm.test.ts  hostForm.ts  hostSystem.ts  ssh-command.test.ts  ssh-command.ts
src/i18n/: I18nProvider.tsx  config.ts  i18n-context.ts  index.ts  translate.ts  useI18n.ts
src/i18n/locales/: en.ts  (+2 more)
src/lib/: cron.test.ts  cron.ts  dragPreview.test.ts  dragPreview.ts  ipc.ts  platform.ts  pointerDrag.ts  settingSync.ts  toast.ts  useResizeHandle.ts  utils.test.ts  utils.ts  variables.ts  windows.ts
src/overlays/: GroupFormDialog.tsx  HostFormDialog.tsx  SettingsDialog.tsx
src/styles/: globals.css
src/theme/: ThemeProvider.tsx  accent.ts  dom.ts  theme-context.ts  useTheme.ts
src/themes/: ThemeProvider.tsx  apply.ts  context.ts  index.ts  themes.test.ts  themes.ts  types.ts  useTheme.ts
src/types/: models.ts  monaco-json.d.ts
src/windows/: CommandWindow.tsx  GroupsWindow.tsx  HostFormWindow.tsx  SettingsWindow.tsx
src/workbench/: ActivityBar.tsx  CommandPalette.tsx  EditorArea.tsx  PanelHeader.tsx  SideBar.tsx  SideBarFilter.tsx  SideBarView.tsx  StatusBar.tsx  TitleBar.tsx  WindowControls.tsx  Workbench.tsx  appearance-settings.test.ts  appearance.ts  command-palette-navigation.test.ts  command-palette-navigation.ts  commands.ts  font.ts  fonts.ts  keybindings.ts  layout-sizing.ts  layout-state.ts  layout.test.ts  layout.ts  overlays.test.ts  overlays.ts  pane-layout.test.ts  pane-layout.ts  shortcuts.test.ts  shortcuts.ts  side-bar-filter.test.ts  side-bar-filter.ts  tab-drag.test.ts  tab-drag.ts  tab-styles.ts  tabs.test.ts  tabs.ts  window-listener.test.ts  window-listener.ts  workspace-state.test.ts  workspace-state.ts  (+1 more)
(+135 files in other folders)
