[package]
name = "sageport"
version = "0.4.3"
description = "Sageport — an ops-focused SSH client with an AI assistant"
authors = ["JoyGqz"]
edition = "2021"

[[bin]]
name = "Sageport"
path = "src/main.rs"

[lib]
# _lib suffix avoids a bin/lib name conflict on Windows (rust-lang/cargo#8519)
name = "sageport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }

aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

russh = "0.62.2"
russh-sftp = "2.3.0"

ssh-key = { version = "0.6.7", features = ["ed25519", "rsa", "ecdsa", "p256", "p384", "p521", "encryption", "std"] }

tar = "0.4"
flate2 = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

parking_lot = "0.12"

async-trait = "0.1"
sha2 = "0.10"
url = "2"
quick-xml = "0.37"
rusty-s3 = "0.10"
portable-pty = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSButton",
  "NSControl",
  "NSResponder",
  "NSView",
  "NSWindow",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSNotification",
  "NSObject",
  "NSOperation",
  "NSString",
  "block2",
] }

[features]
# required for production builds without a dev server, DO NOT REMOVE
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# rustc debuginfo stripping mis-aligns the Mach-O LINKEDIT string pool, which macOS dyld rejects; DO NOT REMOVE
strip = "none"
